deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    application: caseworking
    costcentre: CW
    deploytag: CW.18.03.27.1507
    environment: iptcwidev7
    schedule: businesshours
    service: ipt-prodcat-db
  name: ipt-prodcat-db-kp
  namespace: iptcwidev7
  resourceVersion: "59454643"
  selfLink: /api/v1/namespaces/iptcwidev7/pods/ipt-prodcat-db-kp
  uid: 92b8a936-39a3-11e8-a66f-0a66fd716b96
spec:
  containers:
  - env:
    - name: VAULT_TOKEN
      valueFrom:
        secretKeyRef:
          key: vault-token
          name: cw-vault-token
    image: registry.ipttools.io/ipt-ss-product-catalogue-db-master:1.0.84-2018-04-11-16-33-19
    imagePullPolicy: Always
    name: ipt-prodcat-db-kc
    resources:
      limits:
        cpu: "1"
        memory: 1280Mi
      requests:
        cpu: 250m
        memory: 512Mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /etc/properties
      name: properties-volume
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-bftrm
      readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: ip-10-120-69-135.eu-west-1.compute.internal
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoSchedule
    key: node.kubernetes.io/memory-pressure
    operator: Exists
  - effect: NoExecute
    key: node.alpha.kubernetes.io/notReady
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.alpha.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - configMap:
      defaultMode: 420
      name: ipt-prodcat-db-kcm
    name: properties-volume
  - name: default-token-bftrm
    secret:
      defaultMode: 420
      secretName: default-token-bftrm
