ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: test-ingress
    namespace: kube-env1
    labels:
        ingress_toggle: ingress
    annotations:
        ingress.kubernetes.io/secure-backends: 'true'
spec:
    tls:
        - 
            hosts:
                - myurl-kube-env1.co.uk
    rules:
        - 
            host: myurl-kube-env1.co.uk
            http:
                paths:
                    - 
                        path: /
                        backend:
                            serviceName: test-service
                            servicePort: 80
